adapt html tags

--- a/assets/style.css
+++ b/assets/style.css
@@ -83,6 +83,7 @@ body {
   font-weight: 800;
   font-style: italic;
   width: 60%;
+  font-size: 1rem;
 }
 #about-me p {
   width: 80%;
@@ -95,6 +96,7 @@ body {
 .title {
   text-align: center;
   padding-block: 2em;
+  font-size: 1.75rem;
 }
 .gallery .nav {
   justify-content: center;
@@ -147,6 +149,7 @@ body {
   font-family: Spectral;
   font-style: italic;
   font-weight: 300;
+  font-size: 2.5rem;
 }
 .quote__author {
   font-family: Spectral;
@@ -212,6 +215,11 @@ body {
 .form-container {
   flex: 2;
 }
+
+.form-title {
+  font-size: 1.75rem;
+}
+
 form {
   display: flex;
   flex-direction: column;
@@ -253,7 +261,7 @@ input[type="submit"] {
     margin-top: 0;
     margin-bottom: 1em;
   }
-  #about-me h6,
+
   #about-me p {
     width: 100%;
   }
